fix: Code - keep text wrapped

--- a/src/index.scss
+++ b/src/index.scss
@@ -68,7 +68,7 @@ html {
 .markdown pre {
   @apply border-0 overflow-x-auto;
 }
-.markdown pre code {
+.markdown pre code.hljs {
   @apply text-nowrap;
 }
 
